--- a/index.html
+++ b/index.html
@@ -383,6 +383,48 @@
       let skierBaseOffset = { x: 0, y: 0, z: 0 };
       let skierBones = {}; // Store bone references for manipulation
 
+      // Subtle animation state for natural movement
+      let animationTime = 0;
+      let animationParams = {
+        pelvis: { baseY: 0, amplitude: 0.19 },
+        waist: { baseY: 0, amplitude: 0.2 },
+        head: { baseY: -0.47, amplitude: 0.19 },
+      };
+      const animationSpeed = 1.9;
+
+      // Jump animation state
+      let jumpAnimationSpeed = 1.0;
+      let jumpAnimationParams = {
+        lUpperarmZ: -0.12,
+        rUpperarmZ: 0.02,
+        lThighY: -0.42,
+        rThighY: 0.63,
+      };
+      let jumpAnimationTime = 0;
+      let lUpperarmBaseZ = 0;
+      let rUpperarmBaseZ = 0;
+      let lThighBaseY = 0;
+      let rThighBaseY = 0;
+
+      // Turn animation state
+      let rightTurnSpeed = 1.0;
+      let rightTurnParams = {
+        pelvisY: -1.02,
+        headY: 0.13,
+      };
+      let rightTurnBaseValues = { pelvisY: 0, headY: 0 };
+      let isRightTurning = false;
+      let rightTurnTime = 0;
+
+      let leftTurnSpeed = 1.0;
+      let leftTurnParams = {
+        pelvisY: -0.02,
+        headY: -0.87,
+      };
+      let leftTurnBaseValues = { pelvisY: 0, headY: 0 };
+      let isLeftTurning = false;
+      let leftTurnTime = 0;
+
       let gameActive = true;
       let score = 0;
       let currentRotationSpeed = CONFIG.baseSpeed;
@@ -459,11 +501,12 @@
         renderer.shadowMap.type = THREE.PCFSoftShadowMap;
         document.body.appendChild(renderer.domElement);
 
-        const ambientLight = new THREE.AmbientLight(0xffffff, 0.7);
+        // Lighting - match pose editor for consistent look
+        const ambientLight = new THREE.AmbientLight(0xffffff, 0.8);
         scene.add(ambientLight);
 
         const dirLight = new THREE.DirectionalLight(0xffffff, 1.0);
-        dirLight.position.set(20, 80, 50);
+        dirLight.position.set(10, 20, 10);
         dirLight.castShadow = true;
         dirLight.shadow.mapSize.width = 2048;
         dirLight.shadow.mapSize.height = 2048;
@@ -477,12 +520,8 @@
 
         // Add a subtle fill light from the front for better model visibility
         const fillLight = new THREE.DirectionalLight(0x87ceeb, 0.4);
-        fillLight.position.set(0, 30, 100);
+        fillLight.position.set(-10, 10, -10);
         scene.add(fillLight);
-
-        // Add hemisphere light for natural sky/ground lighting
-        const hemiLight = new THREE.HemisphereLight(0x87ceeb, 0xffffff, 0.3);
-        scene.add(hemiLight);
 
         const sphereGeo = new THREE.SphereGeometry(CONFIG.worldRadius, 64, 64);
         const sphereMat = new THREE.MeshLambertMaterial({
@@ -769,7 +808,7 @@ fov: ${camParams.fov}
           Spine02: { x: 0.0, y: 0.0, z: 0.0 },
           NeckTwist01: { x: 0.0, y: -0.0, z: -0.0 },
           NeckTwist02: { x: 0.0, y: 0.0, z: 0.0 },
-          Head: { x: -0.0, y: -0.37, z: -0.0 },
+          Head: { x: -0.0, y: -0.47, z: -0.0 },
           L_Clavicle: { x: -2.37, y: -1.39, z: 2.39 },
           L_Upperarm: { x: 0.36, y: -0.0, z: -1.03 },
           L_Forearm: { x: 1.22, y: 0.99, z: -0.27 },
@@ -779,13 +818,13 @@ fov: ${camParams.fov}
           L_UpperarmTwist01: { x: 0.0, y: 0.0, z: -0.0 },
           L_UpperarmTwist02: { x: 0.0, y: 0.0, z: 0.0 },
           R_Clavicle: { x: -2.24, y: -1.41, z: -0.84 },
-          R_Upperarm: { x: -0.57, y: -0.11, z: 0.81 },
+          R_Upperarm: { x: -0.32, y: 0.13, z: 0.88 },
           R_UpperarmTwist01: { x: -0.0, y: -0.0, z: -0.0 },
           R_UpperarmTwist02: { x: -0.0, y: -0.0, z: 0.0 },
-          R_Forearm: { x: 0.97, y: -0.54, z: 0.66 },
+          R_Forearm: { x: 1.38, y: -0.02, z: 0.48 },
           R_ForearmTwist01: { x: 0.0, y: -0.0, z: 0.0 },
           R_ForearmTwist02: { x: -0.0, y: 0.0, z: -0.0 },
-          R_Hand: { x: -0.0, y: -0.0, z: -0.0 },
+          R_Hand: { x: 0.03, y: 0.38, z: 0.08 },
         };
 
         // Apply the pose
@@ -797,6 +836,23 @@ fov: ${camParams.fov}
               y: pose.y || 0,
               z: pose.z || 0,
             };
+
+            // Store base values for animated bones
+            if (boneName === "Pelvis") {
+              animationParams.pelvis.baseY = boneParams[boneName].y;
+            } else if (boneName === "Waist") {
+              animationParams.waist.baseY = boneParams[boneName].y;
+            } else if (boneName === "Head") {
+              animationParams.head.baseY = boneParams[boneName].y;
+            } else if (boneName === "L_Upperarm") {
+              lUpperarmBaseZ = boneParams[boneName].z;
+            } else if (boneName === "R_Upperarm") {
+              rUpperarmBaseZ = boneParams[boneName].z;
+            } else if (boneName === "L_Thigh") {
+              lThighBaseY = boneParams[boneName].y;
+            } else if (boneName === "R_Thigh") {
+              rThighBaseY = boneParams[boneName].y;
+            }
 
             // Update the bone rotation
             updateBoneRotation(boneName);
@@ -991,11 +1047,6 @@ skierModel.rotation.set(${skierParams.rotX.toFixed(
             }
 
             playerGroup.add(skierModel);
-
-            // Add a dedicated light to illuminate the player
-            const playerLight = new THREE.PointLight(0xffffff, 1.5, 20);
-            playerLight.position.set(0, 5, 3);
-            playerGroup.add(playerLight);
 
             // Setup animations if present
             if (gltf.animations && gltf.animations.length > 0) {
@@ -1280,6 +1331,46 @@ skierModel.rotation.set(${skierParams.rotX.toFixed(
         spawnTree(angle, true);
       }
 
+      function updateSubtleAnimations(deltaTime) {
+        animationTime += deltaTime * animationSpeed;
+
+        // Pelvis - slower, smoother sway (only if not turning)
+        if (
+          boneParams.Pelvis &&
+          skierBones.Pelvis &&
+          !isRightTurning &&
+          !isLeftTurning
+        ) {
+          const offset =
+            Math.sin(animationTime * 0.8) * animationParams.pelvis.amplitude;
+          boneParams.Pelvis.y = animationParams.pelvis.baseY + offset;
+          updateBoneRotation("Pelvis");
+        }
+
+        // Waist - slightly faster, counter to pelvis
+        if (boneParams.Waist && skierBones.Waist) {
+          const offset =
+            Math.sin(animationTime * 1.2 + Math.PI * 0.3) *
+            animationParams.waist.amplitude;
+          boneParams.Waist.y = animationParams.waist.baseY + offset;
+          updateBoneRotation("Waist");
+        }
+
+        // Head - faster, subtle movement (only if not turning)
+        if (
+          boneParams.Head &&
+          skierBones.Head &&
+          !isRightTurning &&
+          !isLeftTurning
+        ) {
+          const offset =
+            Math.sin(animationTime * 1.5 + Math.PI * 0.5) *
+            animationParams.head.amplitude;
+          boneParams.Head.y = animationParams.head.baseY + offset;
+          updateBoneRotation("Head");
+        }
+      }
+
       function animate() {
         requestAnimationFrame(animate);
 
@@ -1288,6 +1379,16 @@ skierModel.rotation.set(${skierParams.rotX.toFixed(
         if (mixer) {
           mixer.update(delta);
         }
+
+        // Update subtle bone animations
+        updateSubtleAnimations(delta);
+
+        // Update jump animation
+        updateJumpAnimation(delta);
+
+        // Update turn animations
+        updateRightTurnAnimation(delta);
+        updateLeftTurnAnimation(delta);
 
         if (gameActive) update();
         renderer.render(scene, camera);
@@ -1452,6 +1553,107 @@ skierModel.rotation.set(${skierParams.rotX.toFixed(
         if (currentLane < -1) currentLane = -1;
         if (currentLane > 1) currentLane = 1;
         targetX = currentLane * CONFIG.laneWidth;
+
+        // Start turn animation
+        if (direction > 0) {
+          startRightTurn();
+        } else if (direction < 0) {
+          startLeftTurn();
+        }
+      }
+
+      function startRightTurn() {
+        if (!boneParams.Pelvis || !boneParams.Head) return;
+        // Store current values (which include base animation offset)
+        rightTurnBaseValues.pelvisY = boneParams.Pelvis.y;
+        rightTurnBaseValues.headY = boneParams.Head.y;
+        isRightTurning = true;
+        rightTurnTime = 0;
+      }
+
+      function startLeftTurn() {
+        if (!boneParams.Pelvis || !boneParams.Head) return;
+        // Store current values (which include base animation offset)
+        leftTurnBaseValues.pelvisY = boneParams.Pelvis.y;
+        leftTurnBaseValues.headY = boneParams.Head.y;
+        isLeftTurning = true;
+        leftTurnTime = 0;
+      }
+
+      function updateRightTurnAnimation(deltaTime) {
+        if (!isRightTurning) return;
+
+        rightTurnTime += deltaTime * rightTurnSpeed;
+        const turnUpDuration = 0.2;
+        const turnDownDuration = 0.2;
+        const totalDuration = turnUpDuration + turnDownDuration;
+
+        let progress = 0;
+        if (rightTurnTime < turnUpDuration) {
+          const t = rightTurnTime / turnUpDuration;
+          progress = 1 - (1 - t) * (1 - t);
+        } else if (rightTurnTime < totalDuration) {
+          const t = (rightTurnTime - turnUpDuration) / turnDownDuration;
+          progress = 1 - t * t;
+        } else {
+          isRightTurning = false;
+          rightTurnTime = 0;
+          return;
+        }
+
+        if (boneParams.Pelvis && skierBones.Pelvis) {
+          // Interpolate from base to turn position
+          boneParams.Pelvis.y =
+            animationParams.pelvis.baseY +
+            (rightTurnParams.pelvisY - animationParams.pelvis.baseY) * progress;
+          updateBoneRotation("Pelvis");
+        }
+
+        if (boneParams.Head && skierBones.Head) {
+          // Interpolate from base to turn position
+          boneParams.Head.y =
+            animationParams.head.baseY +
+            (rightTurnParams.headY - animationParams.head.baseY) * progress;
+          updateBoneRotation("Head");
+        }
+      }
+
+      function updateLeftTurnAnimation(deltaTime) {
+        if (!isLeftTurning) return;
+
+        leftTurnTime += deltaTime * leftTurnSpeed;
+        const turnUpDuration = 0.2;
+        const turnDownDuration = 0.2;
+        const totalDuration = turnUpDuration + turnDownDuration;
+
+        let progress = 0;
+        if (leftTurnTime < turnUpDuration) {
+          const t = leftTurnTime / turnUpDuration;
+          progress = 1 - (1 - t) * (1 - t);
+        } else if (leftTurnTime < totalDuration) {
+          const t = (leftTurnTime - turnUpDuration) / turnDownDuration;
+          progress = 1 - t * t;
+        } else {
+          isLeftTurning = false;
+          leftTurnTime = 0;
+          return;
+        }
+
+        if (boneParams.Pelvis && skierBones.Pelvis) {
+          // Interpolate from base to turn position
+          boneParams.Pelvis.y =
+            animationParams.pelvis.baseY +
+            (leftTurnParams.pelvisY - animationParams.pelvis.baseY) * progress;
+          updateBoneRotation("Pelvis");
+        }
+
+        if (boneParams.Head && skierBones.Head) {
+          // Interpolate from base to turn position
+          boneParams.Head.y =
+            animationParams.head.baseY +
+            (leftTurnParams.headY - animationParams.head.baseY) * progress;
+          updateBoneRotation("Head");
+        }
       }
 
       function jump() {
@@ -1459,6 +1661,94 @@ skierModel.rotation.set(${skierParams.rotX.toFixed(
         if (!isJumping) {
           isJumping = true;
           verticalVelocity = CONFIG.jumpStrength;
+
+          // Start jump animation
+          startJumpAnimation();
+        }
+      }
+
+      function startJumpAnimation() {
+        if (!boneParams.L_Upperarm || !boneParams.R_Upperarm) return;
+
+        // Store base values (current position)
+        lUpperarmBaseZ = boneParams.L_Upperarm.z;
+        rUpperarmBaseZ = boneParams.R_Upperarm.z;
+        if (boneParams.L_Thigh) lThighBaseY = boneParams.L_Thigh.y;
+        if (boneParams.R_Thigh) rThighBaseY = boneParams.R_Thigh.y;
+
+        jumpAnimationTime = 0;
+      }
+
+      function updateJumpAnimation(deltaTime) {
+        if (!isJumping) {
+          // Reset to base when not jumping
+          if (boneParams.L_Upperarm && lUpperarmBaseZ !== 0) {
+            boneParams.L_Upperarm.z = lUpperarmBaseZ;
+            updateBoneRotation("L_Upperarm");
+          }
+          if (boneParams.R_Upperarm && rUpperarmBaseZ !== 0) {
+            boneParams.R_Upperarm.z = rUpperarmBaseZ;
+            updateBoneRotation("R_Upperarm");
+          }
+          if (boneParams.L_Thigh && lThighBaseY !== 0) {
+            boneParams.L_Thigh.y = lThighBaseY;
+            updateBoneRotation("L_Thigh");
+          }
+          if (boneParams.R_Thigh && rThighBaseY !== 0) {
+            boneParams.R_Thigh.y = rThighBaseY;
+            updateBoneRotation("R_Thigh");
+          }
+          return;
+        }
+
+        jumpAnimationTime += deltaTime * jumpAnimationSpeed;
+        const jumpUpDuration = 0.3; // Time to go from base to jump position
+        const jumpDownDuration = 0.3; // Time to go from jump back to base
+        const totalDuration = jumpUpDuration + jumpDownDuration;
+
+        let progress = 0;
+
+        if (jumpAnimationTime < jumpUpDuration) {
+          // Phase 1: Going up (base → jump position)
+          const t = jumpAnimationTime / jumpUpDuration;
+          // Ease out for going up
+          progress = 1 - (1 - t) * (1 - t);
+        } else if (jumpAnimationTime < totalDuration) {
+          // Phase 2: Going down (jump position → base)
+          const t = (jumpAnimationTime - jumpUpDuration) / jumpDownDuration;
+          // Ease in for going down
+          progress = 1 - t * t;
+        } else {
+          // Animation complete - reset to base
+          progress = 0;
+        }
+
+        if (boneParams.L_Upperarm && skierBones.L_Upperarm) {
+          boneParams.L_Upperarm.z =
+            lUpperarmBaseZ +
+            (jumpAnimationParams.lUpperarmZ - lUpperarmBaseZ) * progress;
+          updateBoneRotation("L_Upperarm");
+        }
+
+        if (boneParams.R_Upperarm && skierBones.R_Upperarm) {
+          boneParams.R_Upperarm.z =
+            rUpperarmBaseZ +
+            (jumpAnimationParams.rUpperarmZ - rUpperarmBaseZ) * progress;
+          updateBoneRotation("R_Upperarm");
+        }
+
+        if (boneParams.L_Thigh && skierBones.L_Thigh) {
+          boneParams.L_Thigh.y =
+            lThighBaseY +
+            (jumpAnimationParams.lThighY - lThighBaseY) * progress;
+          updateBoneRotation("L_Thigh");
+        }
+
+        if (boneParams.R_Thigh && skierBones.R_Thigh) {
+          boneParams.R_Thigh.y =
+            rThighBaseY +
+            (jumpAnimationParams.rThighY - rThighBaseY) * progress;
+          updateBoneRotation("R_Thigh");
         }
       }
 
