--- a/index.html
+++ b/index.html
@@ -365,8 +365,9 @@
         boundaryInterval: 0.08,
         laneWidth: 5,
         gravity: 0.06, // Slightly higher gravity for snappier jumps
-        jumpStrength: 0.9, // Lower jump (was 1.2)
+        jumpStrength: 0.7, // Lower jump height
         fogColor: 0x87ceeb,
+        treeVerticalOffset: 3, // Vertical offset for playing trees (adjustable)
         groundColor: 0xffffff,
       };
 
@@ -446,16 +447,16 @@
 
       // Camera State (User Values applied here)
       let camParams = {
-        y: 112,
-        z: 33,
-        lookY: 90,
-        lookZ: -13,
-        fov: 44,
+        y: 114,
+        z: 42,
+        lookY: 92,
+        lookZ: -9,
+        fov: 38,
       };
 
       // Skier Transform State
       let skierParams = {
-        scale: 3.5,
+        scale: 4.4,
         posX: -0.2,
         posY: 0.6,
         posZ: -0.3,
@@ -483,6 +484,12 @@
 
       // --- INITIALIZATION ---
       function init() {
+        // Load models
+        loadTreeModel();
+        loadRockModel();
+        loadSignModel();
+        loadFenceModel();
+
         scene = new THREE.Scene();
         scene.background = new THREE.Color(CONFIG.fogColor);
         scene.fog = new THREE.Fog(CONFIG.fogColor, 60, 120);
@@ -540,14 +547,8 @@
         setupDebugControls();
         setupSkierControls();
 
-        // Initial Objects
-        // Spawn ahead of player so they are visible immediately
-        for (let i = 0; i < 30; i++) {
-          // Spawn angle: 0.5 down to -1.0 (covering visible range)
-          let angle = 0.5 - i * 0.05;
-          spawnTree(angle, true);
-          spawnBoundary(angle);
-        }
+        // Initial trees will be spawned after the model loads (in loadTreeModel callback)
+        // Don't spawn them here to avoid fallback procedural trees
 
         animate();
       }
@@ -1188,30 +1189,162 @@ skierModel.rotation.set(${skierParams.rotX.toFixed(
       }
 
       // --- ASSETS ---
-      const treeGeo = new THREE.ConeGeometry(1.5, 4, 8);
-      const trunkGeo = new THREE.CylinderGeometry(0.4, 0.4, 1, 8);
-      const treeMat = new THREE.MeshLambertMaterial({ color: 0x27ae60 });
-      const trunkMat = new THREE.MeshLambertMaterial({ color: 0x5d4037 });
-      const snowMat = new THREE.MeshLambertMaterial({ color: 0xffffff });
+      let treeModelTemplate = null;
+      let rockModelTemplate = null;
+      let redSignModelTemplate = null;
+      let blueSignModelTemplate = null;
+      let fenceModelTemplate = null;
+
+      function loadTreeModel() {
+        const loader = new THREE.GLTFLoader();
+        loader.load(
+          "assets/models/alpine_tree_v1.glb",
+          (gltf) => {
+            treeModelTemplate = gltf.scene;
+            console.log("Alpine tree model loaded successfully");
+            // Spawn initial trees after model is loaded
+            spawnInitialTrees();
+          },
+          (xhr) => {
+            console.log(
+              `Loading tree: ${((xhr.loaded / xhr.total) * 100).toFixed(1)}%`
+            );
+          },
+          (error) => {
+            console.error("Error loading alpine tree model:", error);
+            // Still spawn trees even if loading fails (will use fallback)
+            spawnInitialTrees();
+          }
+        );
+      }
+
+      function loadRockModel() {
+        const loader = new THREE.GLTFLoader();
+        loader.load(
+          "assets/models/rock_v1.glb",
+          (gltf) => {
+            rockModelTemplate = gltf.scene;
+            console.log("Rock model loaded successfully");
+          },
+          (xhr) => {
+            console.log(
+              `Loading rock: ${((xhr.loaded / xhr.total) * 100).toFixed(1)}%`
+            );
+          },
+          (error) => {
+            console.error("Error loading rock model:", error);
+          }
+        );
+      }
+
+      function loadSignModel() {
+        const loader = new THREE.GLTFLoader();
+
+        // Load red sign
+        loader.load(
+          "assets/models/red_sign_v1.glb",
+          (gltf) => {
+            redSignModelTemplate = gltf.scene;
+            console.log("Red sign model loaded successfully");
+          },
+          (xhr) => {
+            console.log(
+              `Loading red sign: ${((xhr.loaded / xhr.total) * 100).toFixed(
+                1
+              )}%`
+            );
+          },
+          (error) => {
+            console.error("Error loading red sign model:", error);
+          }
+        );
+
+        // Load blue sign
+        loader.load(
+          "assets/models/blue_sign_v1.glb",
+          (gltf) => {
+            blueSignModelTemplate = gltf.scene;
+            console.log("Blue sign model loaded successfully");
+          },
+          (xhr) => {
+            console.log(
+              `Loading blue sign: ${((xhr.loaded / xhr.total) * 100).toFixed(
+                1
+              )}%`
+            );
+          },
+          (error) => {
+            console.error("Error loading blue sign model:", error);
+          }
+        );
+      }
+
+      function loadFenceModel() {
+        const loader = new THREE.GLTFLoader();
+        loader.load(
+          "assets/models/wooden_fence_v1.glb",
+          (gltf) => {
+            fenceModelTemplate = gltf.scene;
+            console.log("Wooden fence model loaded successfully");
+          },
+          (xhr) => {
+            console.log(
+              `Loading fence: ${((xhr.loaded / xhr.total) * 100).toFixed(1)}%`
+            );
+          },
+          (error) => {
+            console.error("Error loading fence model:", error);
+          }
+        );
+      }
+
+      function spawnInitialTrees() {
+        // Initial Objects
+        // Spawn ahead of player so they are visible immediately
+        for (let i = 0; i < 30; i++) {
+          // Spawn angle: 0.5 down to -1.0 (covering visible range)
+          let angle = 0.5 - i * 0.05;
+          spawnTree(angle, true);
+          spawnBoundary(angle);
+        }
+      }
+
+      function createTree(isDecoration = false) {
+        if (!treeModelTemplate) {
+          // Model not loaded yet - return null to skip spawning
+          console.warn("Tree model not loaded yet, skipping tree creation");
+          return null;
+        }
+
+        // Clone the GLB model
+        const tree = treeModelTemplate.clone();
+
+        // Enable shadows on all meshes
+        tree.traverse((child) => {
+          if (child.isMesh) {
+            child.castShadow = true;
+            child.receiveShadow = true;
+          }
+        });
+
+        // Randomize scale - slight variation
+        const baseScale = isDecoration ? 5.0 : 8.0;
+        const scaleVariation = 0.8 + Math.random() * 0.5;
+        const scale = baseScale * scaleVariation;
+        tree.scale.set(scale, scale, scale);
+
+        // Randomize Y rotation significantly for variety
+        const randomYRotation = Math.random() * Math.PI * 2; // 0 to 360 degrees
+        tree.rotation.y = randomYRotation;
+
+        return tree;
+      }
 
       function spawnTree(angle, isDecoration = false, laneIndex = 0) {
-        const treeGroup = new THREE.Group();
+        const tree = createTree(isDecoration);
 
-        const leaves = new THREE.Mesh(treeGeo, treeMat);
-        leaves.position.y = 2.0;
-        leaves.castShadow = true;
-        treeGroup.add(leaves);
-
-        const cap = new THREE.Mesh(
-          new THREE.ConeGeometry(1.0, 1.5, 8),
-          snowMat
-        );
-        cap.position.y = 3.3;
-        treeGroup.add(cap);
-
-        const trunk = new THREE.Mesh(trunkGeo, trunkMat);
-        trunk.position.y = 0.5;
-        treeGroup.add(trunk);
+        // Skip if model not loaded yet
+        if (!tree) return;
 
         let xPos;
         if (isDecoration) {
@@ -1222,34 +1355,70 @@ skierModel.rotation.set(${skierParams.rotX.toFixed(
           xPos = lane * CONFIG.laneWidth;
         }
 
-        placeOnSphere(treeGroup, angle, xPos);
-        activeObstacles.push({ mesh: treeGroup, angle: angle });
+        placeOnSphere(tree, angle, xPos);
+
+        // Apply vertical offset for playing trees only (not decoration trees)
+        // Offset is applied along the sphere's surface normal (not world Y)
+        // Adjust CONFIG.treeVerticalOffset to control height
+        if (!isDecoration && CONFIG.treeVerticalOffset !== 0) {
+          // Calculate sphere surface normal at this angle
+          const R = CONFIG.worldRadius;
+          const normalY = Math.cos(angle);
+          const normalZ = Math.sin(angle);
+          // Move along the normal by the offset amount
+          tree.position.y += CONFIG.treeVerticalOffset * normalY;
+          tree.position.z += CONFIG.treeVerticalOffset * normalZ;
+        }
+
+        activeObstacles.push({ mesh: tree, angle: angle });
       }
 
-      // NEW SMALLER BARRIER
-      const stickGeo = new THREE.CylinderGeometry(0.12, 0.12, 3.0, 8); // Shorter sticks
-      const barrierMat = new THREE.MeshLambertMaterial({ color: 0xe74c3c });
+      function createRock() {
+        if (!rockModelTemplate) {
+          // Model not loaded yet - return null to skip spawning
+          console.warn("Rock model not loaded yet, skipping rock creation");
+          return null;
+        }
+
+        // Clone the GLB model
+        const rock = rockModelTemplate.clone();
+
+        // Enable shadows on all meshes
+        rock.traverse((child) => {
+          if (child.isMesh) {
+            child.castShadow = true;
+            child.receiveShadow = true;
+          }
+        });
+
+        // Randomize scale - small variation (rocks should be smaller than trees)
+        const baseScale = 3.0; // Smaller than trees (trees are 5.0-8.0)
+        const scaleVariation = 0.6 + Math.random() * 0.4; // 0.6 to 1.0 variation
+        const scale = baseScale * scaleVariation;
+        rock.scale.set(scale, scale, scale);
+
+        // Randomize Y rotation significantly for variety (big variation)
+        const randomYRotation = Math.random() * Math.PI * 2; // 0 to 360 degrees
+        rock.rotation.y = randomYRotation;
+
+        // Also randomize X and Z rotation for more natural look
+        rock.rotation.x = (Math.random() - 0.5) * 0.3; // Small tilt
+        rock.rotation.z = (Math.random() - 0.5) * 0.3; // Small tilt
+
+        return rock;
+      }
 
       function spawnBarrier(angle, laneIndex) {
+        const rock = createRock();
+
+        // Skip if model not loaded yet
+        if (!rock) return;
+
         const lane = laneIndex - 1;
         const xPos = lane * CONFIG.laneWidth;
 
-        const group = new THREE.Group();
-
-        const s1 = new THREE.Mesh(stickGeo, barrierMat);
-        s1.rotation.z = Math.PI / 4;
-        s1.position.y = 0.8; // Lower
-        s1.castShadow = true;
-        group.add(s1);
-
-        const s2 = new THREE.Mesh(stickGeo, barrierMat);
-        s2.rotation.z = -Math.PI / 4;
-        s2.position.y = 0.8; // Lower
-        s2.castShadow = true;
-        group.add(s2);
-
-        placeOnSphere(group, angle, xPos);
-        activeBarriers.push({ mesh: group, angle: angle, passed: false });
+        placeOnSphere(rock, angle, xPos);
+        activeBarriers.push({ mesh: rock, angle: angle, passed: false });
       }
 
       // --- NEW: BOUNDARY DECORATIONS (Flags/Fences) ---
@@ -1272,40 +1441,123 @@ skierModel.rotation.set(${skierParams.rotX.toFixed(
 
         const leftObj = createBoundaryObject(isFence, true);
         placeOnSphere(leftObj, angle, -9);
+        // Adjust fence Y position (can be modified here)
+        if (isFence) {
+          leftObj.position.y += 0; // Adjust this value to raise/lower the fence
+        }
         activeBoundaries.push({ mesh: leftObj });
 
         const rightObj = createBoundaryObject(isFence, false);
         placeOnSphere(rightObj, angle, 9);
+        // Adjust fence Y position (can be modified here)
+        if (isFence) {
+          rightObj.position.y += 0; // Adjust this value to raise/lower the fence
+        }
         activeBoundaries.push({ mesh: rightObj });
+      }
+
+      function createSign() {
+        // Randomly choose between red and blue sign
+        const useRed = Math.random() > 0.5;
+        const signTemplate = useRed
+          ? redSignModelTemplate
+          : blueSignModelTemplate;
+
+        if (!signTemplate) {
+          // Model not loaded yet - return null to skip spawning
+          console.warn("Sign model not loaded yet, skipping sign creation");
+          return null;
+        }
+
+        // Clone the GLB model
+        const sign = signTemplate.clone();
+
+        // Enable shadows on all meshes
+        sign.traverse((child) => {
+          if (child.isMesh) {
+            child.castShadow = true;
+            child.receiveShadow = true;
+          }
+        });
+
+        // Scale up the sign
+        const scale = 2.5;
+        sign.scale.set(scale, scale, scale);
+
+        // Raise the sign so it's flush with the ground (not buried)
+        // Adjust Y position based on scale to keep it at ground level
+        sign.position.y += 0.5; // Adjust this value to position sign correctly
+
+        // Randomize Y rotation a bit
+        const randomYRotation = (Math.random() - 0.5) * 0.4; // -0.2 to 0.2 radians (~-11 to 11 degrees)
+        sign.rotation.y = randomYRotation;
+
+        return sign;
+      }
+
+      function createFence() {
+        if (!fenceModelTemplate) {
+          // Model not loaded yet - return null to skip spawning
+          console.warn("Fence model not loaded yet, skipping fence creation");
+          return null;
+        }
+
+        // Clone the GLB model
+        const fence = fenceModelTemplate.clone();
+
+        // Enable shadows on all meshes
+        fence.traverse((child) => {
+          if (child.isMesh) {
+            child.castShadow = true;
+            child.receiveShadow = true;
+          }
+        });
+
+        // Scale up the fence
+        const scale = 5.5;
+        fence.scale.set(scale, scale, scale);
+
+        return fence;
       }
 
       function createBoundaryObject(isFence, isLeft) {
         const group = new THREE.Group();
 
         if (isFence) {
-          const fence = new THREE.Mesh(bFenceGeo, bFenceMat);
-          fence.position.y = 0.75;
-          fence.rotation.y = Math.PI / 2;
-          fence.castShadow = true;
-          group.add(fence);
+          // Use wooden fence model instead of procedural fence
+          const fence = createFence();
+          if (fence) {
+            // Adjust fence Y position (can be modified here)
+            fence.position.y = 0.5; // Adjust this value to raise/lower the fence
+            group.add(fence);
+          } else {
+            // Fallback to procedural fence if model not loaded
+            const proceduralFence = new THREE.Mesh(bFenceGeo, bFenceMat);
+            proceduralFence.position.y = 0.75;
+            proceduralFence.rotation.y = Math.PI / 2;
+            proceduralFence.castShadow = true;
+            group.add(proceduralFence);
+          }
         } else {
-          const isRed = Math.floor(boundaryAlternator / 4) % 2 === 0;
+          // Use red sign model instead of flags
+          const sign = createSign();
+          if (sign) {
+            group.add(sign);
+          } else {
+            // Fallback to flag if model not loaded
+            const pole = new THREE.Mesh(
+              bFlagPoleGeo,
+              new THREE.MeshLambertMaterial({ color: 0x777777 })
+            );
+            pole.position.y = 1.25;
+            pole.castShadow = true;
+            group.add(pole);
 
-          const pole = new THREE.Mesh(
-            bFlagPoleGeo,
-            new THREE.MeshLambertMaterial({ color: 0x777777 })
-          );
-          pole.position.y = 1.25;
-          pole.castShadow = true;
-          group.add(pole);
-
-          const flag = new THREE.Mesh(
-            bFlagCanvasGeo,
-            isRed ? bFlagRedMat : bFlagBlueMat
-          );
-          flag.position.y = 1.8;
-          flag.position.x = isLeft ? 0.6 : -0.6;
-          group.add(flag);
+            const flag = new THREE.Mesh(bFlagCanvasGeo, bFlagRedMat);
+            flag.position.y = 1.8;
+            flag.position.x = isLeft ? 0.6 : -0.6;
+            group.add(flag);
+          }
         }
         return group;
       }
