feat: winterize and optimize assets

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background: rgba(0, 0, 0, 0.8);
+        background: rgba(0, 0, 0, 0.7);
         display: none;
         flex-direction: column;
         align-items: center;
@@ -107,6 +107,24 @@
         border-radius: 20px;
         text-align: center;
         box-shadow: 0 10px 40px rgba(0, 0, 0, 0.5);
+        position: relative;
+        animation: fadeInUp 0.5s ease-out;
+      }
+
+      /* Candy cane border effect */
+      #game-over-content::before {
+        content: "";
+        position: absolute;
+        inset: -8px;
+        border-radius: 28px;
+        background: repeating-linear-gradient(
+          45deg,
+          #dc143c 0px,
+          #dc143c 20px,
+          #ffffff 20px,
+          #ffffff 40px
+        );
+        z-index: -1;
       }
 
       /* Start Screen */
@@ -124,7 +142,7 @@
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
-        background-image: url("/assets/images/bg.png");
+        background-image: url("/assets/images/bg.webp");
         transition: opacity 0.5s ease-out;
       }
 
@@ -136,7 +154,7 @@
       /* Mobile background */
       @media (max-width: 768px) {
         #start-screen {
-          background-image: url("/assets/images/bg-mobile.png");
+          background-image: url("/assets/images/bg-mobile.webp");
         }
       }
 
@@ -314,22 +332,85 @@
         font-weight: bold;
       }
 
-      #retry-button {
-        background: #3498db;
-        color: white;
-        border: none;
+      #retry-button,
+      #quit-button {
+        background: linear-gradient(135deg, #e8f4f8, #b8d4e3);
+        color: #2c3e50;
+        border: 3px solid #ffffff;
         padding: 15px 40px;
         font-size: 1.2rem;
         font-weight: bold;
-        border-radius: 10px;
+        border-radius: 15px;
         cursor: pointer;
         transition: all 0.3s ease;
         font-family: "Segoe UI", monospace;
+        box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2),
+          inset 0 2px 8px rgba(255, 255, 255, 0.8),
+          0 0 0 2px rgba(255, 255, 255, 0.3);
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        position: relative;
+        overflow: hidden;
+        margin: 0 10px;
       }
 
-      #retry-button:hover {
-        background: #2980b9;
+      #retry-button::before,
+      #quit-button::before {
+        content: "";
+        position: absolute;
+        top: -50%;
+        left: -50%;
+        width: 200%;
+        height: 200%;
+        background: linear-gradient(
+          45deg,
+          transparent 30%,
+          rgba(255, 255, 255, 0.3) 50%,
+          transparent 70%
+        );
+        transform: rotate(45deg);
+        transition: all 0.5s ease;
+        opacity: 0;
+      }
+
+      #retry-button:hover::before,
+      #quit-button:hover::before {
+        opacity: 1;
+        animation: shimmer 1.5s infinite;
+      }
+
+      #retry-button:hover,
+      #quit-button:hover {
+        background: linear-gradient(135deg, #ffffff, #d4e8f0);
         transform: scale(1.05);
+        box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3),
+          inset 0 2px 10px rgba(255, 255, 255, 0.9),
+          0 0 0 3px rgba(255, 255, 255, 0.5);
+        border-color: #ffffff;
+      }
+
+      #retry-button:active,
+      #quit-button:active {
+        transform: scale(0.98);
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2),
+          inset 0 2px 5px rgba(0, 0, 0, 0.1);
+      }
+
+      #game-over-buttons {
+        display: flex;
+        gap: 15px;
+        justify-content: center;
+        flex-wrap: wrap;
+        margin-top: 10px;
+      }
+
+      @media (max-width: 768px) {
+        #retry-button,
+        #quit-button {
+          padding: 14px 35px;
+          font-size: 1.1rem;
+          border-radius: 12px;
+        }
       }
 
       /* Debug Panel */
@@ -567,10 +648,10 @@
       <div id="start-content">
         <img
           id="title-image"
-          src="/assets/images/title.png"
+          src="/assets/images/title.webp"
           alt="Alpine Rush"
         />
-        <img id="character-image" src="/assets/images/ana.png" alt="Ana" />
+        <img id="character-image" src="/assets/images/ana.webp" alt="Ana" />
         <button id="start-button">Start Game</button>
       </div>
     </div>
@@ -777,7 +858,10 @@
         <div id="high-score-display">
           Best: <span id="high-score-value">0</span>m
         </div>
-        <button id="retry-button">Retry</button>
+        <div id="game-over-buttons">
+          <button id="retry-button">Retry</button>
+          <button id="quit-button">Quit</button>
+        </div>
       </div>
     </div>
 
@@ -1202,15 +1286,46 @@
           pauseButton.classList.add("visible");
         }
 
-        // Initialize audio on start
-        if (!audioInitialized) {
-          initAudio();
-          audioInitialized = true;
-        }
-
         // Start the game
         gameActive = true;
         gameStarted = true;
+      }
+
+      function quitGame() {
+        // Hide game over screen
+        const gameOverScreen = document.getElementById("game-over-screen");
+        if (gameOverScreen) {
+          gameOverScreen.classList.remove("visible");
+        }
+
+        // Show start screen
+        const startScreen = document.getElementById("start-screen");
+        if (startScreen) {
+          startScreen.style.display = "flex";
+          startScreen.classList.remove("hidden");
+        }
+
+        // Hide game UI elements
+        const uiLayer = document.getElementById("ui-layer");
+        if (uiLayer) {
+          uiLayer.classList.remove("visible");
+        }
+
+        const settingsButton = document.getElementById("settings-button");
+        if (settingsButton) {
+          settingsButton.classList.remove("visible");
+        }
+
+        const pauseButton = document.getElementById("pause-button");
+        if (pauseButton) {
+          pauseButton.classList.remove("visible");
+        }
+
+        // Reset game state
+        gameActive = false;
+        gameStarted = false;
+        isGameOver = false;
+        isPaused = false;
       }
 
       // --- INITIALIZATION ---
@@ -1224,13 +1339,26 @@
         // Setup start button
         const startButton = document.getElementById("start-button");
         if (startButton) {
-          startButton.addEventListener("click", startGame);
+          startButton.addEventListener("click", () => {
+            // Initialize audio immediately when start button is clicked
+            if (!audioInitialized) {
+              initAudio();
+              audioInitialized = true;
+            }
+            startGame();
+          });
         }
 
         // Setup retry button
         const retryButton = document.getElementById("retry-button");
         if (retryButton) {
           retryButton.addEventListener("click", restartGame);
+        }
+
+        // Setup quit button
+        const quitButton = document.getElementById("quit-button");
+        if (quitButton) {
+          quitButton.addEventListener("click", quitGame);
         }
 
         // Setup pause button
