--- a/index.html
+++ b/index.html
@@ -102,20 +102,24 @@
       }
 
       #game-over-content {
-        background: rgba(255, 255, 255, 0.95);
+        background: #ffffff;
         padding: 40px;
         border-radius: 20px;
         text-align: center;
         box-shadow: 0 10px 40px rgba(0, 0, 0, 0.5);
         position: relative;
         animation: fadeInUp 0.5s ease-out;
+        overflow: visible;
       }
 
       /* Candy cane border effect */
       #game-over-content::before {
         content: "";
         position: absolute;
-        inset: -8px;
+        top: -8px;
+        left: -8px;
+        right: -8px;
+        bottom: -8px;
         border-radius: 28px;
         background: repeating-linear-gradient(
           45deg,
@@ -124,7 +128,21 @@
           #ffffff 20px,
           #ffffff 40px
         );
+        z-index: -2;
+        pointer-events: none;
+      }
+
+      #game-over-content::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        border-radius: 20px;
+        background: #ffffff;
         z-index: -1;
+        pointer-events: none;
       }
 
       /* Start Screen */
@@ -528,8 +546,8 @@
         transform: translateX(-50%);
         width: 50px;
         height: 50px;
-        background: rgba(0, 0, 0, 0.7);
-        border: 2px solid rgba(255, 255, 255, 0.3);
+        background: linear-gradient(135deg, #e8f4f8, #b8d4e3);
+        border: 3px solid #ffffff;
         border-radius: 12px;
         cursor: pointer;
         pointer-events: auto;
@@ -537,11 +555,14 @@
         align-items: center;
         justify-content: center;
         font-size: 24px;
-        color: white;
+        color: #2c3e50;
         transition: all 0.3s ease;
         z-index: 1000;
-        margin-left: -60px;
+        margin-left: -35px;
         opacity: 0;
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2),
+          inset 0 2px 8px rgba(255, 255, 255, 0.8),
+          0 0 0 2px rgba(255, 255, 255, 0.3);
       }
 
       #settings-button.visible {
@@ -549,9 +570,12 @@
       }
 
       #settings-button:hover {
-        background: rgba(0, 0, 0, 0.9);
-        border-color: rgba(255, 255, 255, 0.5);
+        background: linear-gradient(135deg, #ffffff, #d4e8f0);
         transform: translateX(-50%) scale(1.1);
+        box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3),
+          inset 0 2px 10px rgba(255, 255, 255, 0.9),
+          0 0 0 3px rgba(255, 255, 255, 0.5);
+        border-color: #ffffff;
       }
 
       /* Pause/Play Button */
@@ -562,8 +586,8 @@
         transform: translateX(-50%);
         width: 50px;
         height: 50px;
-        background: rgba(0, 0, 0, 0.7);
-        border: 2px solid rgba(255, 255, 255, 0.3);
+        background: linear-gradient(135deg, #e8f4f8, #b8d4e3);
+        border: 3px solid #ffffff;
         border-radius: 12px;
         cursor: pointer;
         pointer-events: auto;
@@ -571,11 +595,14 @@
         align-items: center;
         justify-content: center;
         font-size: 24px;
-        color: white;
+        color: #2c3e50;
         transition: all 0.3s ease;
         z-index: 1000;
-        margin-left: 60px;
+        margin-left: 35px;
         opacity: 0;
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2),
+          inset 0 2px 8px rgba(255, 255, 255, 0.8),
+          0 0 0 2px rgba(255, 255, 255, 0.3);
       }
 
       #pause-button.visible {
@@ -583,9 +610,12 @@
       }
 
       #pause-button:hover {
-        background: rgba(0, 0, 0, 0.9);
-        border-color: rgba(255, 255, 255, 0.5);
+        background: linear-gradient(135deg, #ffffff, #d4e8f0);
         transform: translateX(-50%) scale(1.1);
+        box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3),
+          inset 0 2px 10px rgba(255, 255, 255, 0.9),
+          0 0 0 3px rgba(255, 255, 255, 0.5);
+        border-color: #ffffff;
       }
 
       #settings-menu {
@@ -593,9 +623,13 @@
         bottom: 80px;
         left: 50%;
         transform: translateX(-50%);
-        background: rgba(0, 0, 0, 0.9);
-        border: 2px solid rgba(255, 255, 255, 0.3);
-        border-radius: 12px;
+        background: linear-gradient(
+          135deg,
+          rgba(232, 244, 248, 0.98),
+          rgba(184, 212, 227, 0.98)
+        );
+        border: 3px solid #ffffff;
+        border-radius: 15px;
         padding: 20px;
         min-width: 200px;
         pointer-events: auto;
@@ -603,6 +637,9 @@
         visibility: hidden;
         transition: all 0.3s ease;
         z-index: 1000;
+        box-shadow: 0 8px 25px rgba(0, 0, 0, 0.3),
+          inset 0 2px 10px rgba(255, 255, 255, 0.8),
+          0 0 0 2px rgba(255, 255, 255, 0.3);
       }
 
       #settings-menu.visible {
@@ -611,10 +648,13 @@
       }
 
       #settings-menu h3 {
-        color: #f1c40f;
+        color: #2c3e50;
         margin: 0 0 15px 0;
         font-size: 1rem;
         text-align: center;
+        font-weight: bold;
+        text-transform: uppercase;
+        letter-spacing: 1px;
       }
 
       .settings-option {
@@ -622,7 +662,7 @@
         align-items: center;
         justify-content: space-between;
         margin-bottom: 12px;
-        color: white;
+        color: #2c3e50;
         font-size: 0.9rem;
       }
 
@@ -633,12 +673,14 @@
       .settings-option label {
         cursor: pointer;
         user-select: none;
+        font-weight: 500;
       }
 
       .settings-option input[type="checkbox"] {
         width: 20px;
         height: 20px;
         cursor: pointer;
+        accent-color: #2c3e50;
       }
     </style>
   </head>
@@ -2743,6 +2785,11 @@ skierModel.rotation.set(${skierParams.rotX.toFixed(
         isGameOver = true;
         gameActive = false;
 
+        // Pause ambient ski noise
+        if (ambientSound && !ambientSound.paused) {
+          ambientSound.pause();
+        }
+
         // Play game over sound
         playSound("ohNo");
 
@@ -2887,6 +2934,13 @@ skierModel.rotation.set(${skierParams.rotX.toFixed(
         const gameOverScreen = document.getElementById("game-over-screen");
         if (gameOverScreen) {
           gameOverScreen.classList.remove("visible");
+        }
+
+        // Resume ambient sound if SFX enabled
+        if (ambientSound && sfxEnabled) {
+          ambientSound.play().catch((err) => {
+            console.log("Ambient sound resume failed:", err);
+          });
         }
 
         // Spawn initial trees and boundaries for new game
@@ -3426,7 +3480,16 @@ skierModel.rotation.set(${skierParams.rotX.toFixed(
 
       init();
 
-      // Listen for user interactions to enable audio
+      // Try to initialize audio immediately on page load
+      // If autoplay is blocked, it will be initialized on first user interaction
+      try {
+        initAudio();
+        audioInitialized = true;
+      } catch (err) {
+        console.log("Audio initialization deferred until user interaction");
+      }
+
+      // Listen for user interactions to enable audio (fallback if autoplay blocked)
       document.addEventListener("click", initAudioOnInteraction, {
         once: true,
       });
